<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="35dp"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/plnToUsd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="39dp"
        android:text="@string/pln_to_usd"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText" />

    <TextView
        android:id="@+id/usdToPln"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="35dp"
        android:text="@string/usd_to_pln"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText" />

    <Switch
        android:id="@+id/switchBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="18dp"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/usdToPln"
        app:layout_constraintStart_toEndOf="@+id/plnToUsd"
        app:layout_constraintTop_toBottomOf="@+id/titleText"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/resultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="192dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="191dp"
        android:text="@string/empty_string"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchBox" />

    <Button
        android:id="@+id/convert"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="138dp"
        android:layout_marginEnd="138dp"
        android:layout_marginBottom="45dp"
        android:text="@string/btn_text"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/inputField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:autofillHints="@string/hint_text"
        android:ems="10"
        android:hint="@string/hint_text"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/convert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="LabelFor" />

</androidx.constraintlayout.widget.ConstraintLayout>