<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".ActivityInfo2">

    <Button
        android:id="@+id/btnBack"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginStart="105dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="50dp"
        android:text="@string/back"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/actualToUsd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="150dp"
        android:text="@string/empty_string"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/currencyInfo1"
        app:layout_constraintTop_toBottomOf="@+id/titleText2" />

    <TextView
        android:id="@+id/actualToPln"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        android:text="@string/empty_string"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/currencyInfo"
        app:layout_constraintTop_toBottomOf="@+id/actualToUsd" />

    <TextView
        android:id="@+id/currencyInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="50dp"
        android:text="@string/usd_to_pln"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currencyInfo1" />

    <TextView
        android:id="@+id/titleText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="35dp"
        android:text="@string/actual_currency"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/currencyInfo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="150dp"
        android:text="@string/pln_to_usd"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText2" />

</androidx.constraintlayout.widget.ConstraintLayout>